--- a/wef005exercise1.html
+++ b/wef005exercise1.html
@@ -40,25 +40,10 @@
 
 
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-link dropdown-toggle">
-            <button>
-
-
-
-                
-            </button>
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-list"></i>
-
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"></a>
-                    </li>
-                </ul>
-        </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="true" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
 
     </div>
