--- a/gol/index.html
+++ b/gol/index.html
@@ -1,5 +1,10 @@
-<!-- introduce your self -->
+<!-- introduce your self
+[]-A simple page to introduce yourself 
+1. use bootstrap to make it responsive, use col-12 (Grid system) to make it full width
+2. add some button like drop down menu,to show my background
+3. add color effect  
 
+-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,14 +18,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-    <div>Landing Page</div>
+    <div class="landing-page">
+        <h1>Landing Page</h1>
+        <div class="container">
 
-    <button><a href="gameOfLife.html">Let's start the game!</a></button>
+            <div class="grid-system">
+                <div class="grid-1 col-4" id="my-background">
+                    <h2 class="col-md">My Background</h2>
+                    <p>My name is Yuxuan Wang, I am a senior student in University of Washington. I am majoring in
+                        Informatics and minoring in Math. I am interested in data science and web development. I am
+                        currently looking for a full-time job in the field of data science and web development. </p>
+                </div>
+                <div class="grid-2 col-4" id="my-interest">
+                    <h2 class="col-md">Learning Target</h2>
+                    <p>I am interested in data science and web development. I am currently looking for a full-time
+                        job in the field of data science and web development. </p>
+                </div>
+                <div class="grid-3 col-4" id="my-interest">
+                    <h2 class="col-md">To-Do List</h2>
+                    <p>I am interested in data science and web development. I am currently looking for a
+                        full-time
+                        job in the field of data science and web development. </p>
+                </div>
 
+            </div>
+
+        </div>
+        <button class="link-to"><a href="gameOfLife.html">Let's start the game!</a></button>
 
 </body>
 
