--- a/gol/gameOfLife.html
+++ b/gol/gameOfLife.html
@@ -52,6 +52,15 @@
 
 
 
+        <!-- test -->
+
+        <p>Resize the browser window to fire the <code>resize</code> event.</p>
+        <p>Window height: <span id="height"></span></p>
+        <p>Window width: <span id="width"></span></p>
+
+        <!-- test -->
+
+        
         <script src="gameOfLife.js"></script>
 
 
