--- a/gol/index.html
+++ b/gol/index.html
@@ -23,24 +23,23 @@
 
 <body>
     <div class="landing-page">
-        <h1>Landing Page</h1>
+        <h1>Hello World!</h1>
         <div class="container">
 
             <div class="grid-system">
-                <div class="grid-1 col-4" id="my-background">
-                    <h2 class="col-md">My Background</h2>
-                    <p>My name is Yuxuan Wang, I am a senior student in University of Washington. I am majoring in
-                        Informatics and minoring in Math. I am interested in data science and web development. I am
-                        currently looking for a full-time job in the field of data science and web development. </p>
+                <div class="grid-left col-4" id="my-background">
+                    <h2 class="col-md title">About Me</h2>
+                    <p class ="paragraph">My name is Felix Chan, I worked on securities industry for around 5 years. I am passionate about
+                        programming and foresee that all people in the world will at least know some technique of computational thinking to help their job.That's why i am here.<span class ='smile-face'>:')</span></p>
                 </div>
-                <div class="grid-2 col-4" id="my-interest">
-                    <h2 class="col-md">Learning Target</h2>
-                    <p>I am interested in data science and web development. I am currently looking for a full-time
+                <div class="grid-mid col-4" id="to-do-list">
+                    <h2 class="col-md title">To-Do List</h2>
+                    <p class ="paragraph">I am interested in data science and web development. I am currently looking for a full-time
                         job in the field of data science and web development. </p>
                 </div>
-                <div class="grid-3 col-4" id="my-interest">
-                    <h2 class="col-md">To-Do List</h2>
-                    <p>I am interested in data science and web development. I am currently looking for a
+                <div class="grid-right col-4" id="learning-target">
+                    <h2 class="col-md title">Learning Target</h2>
+                    <p class ="paragraph">I am interested in data science and web development. I am currently looking for a
                         full-time
                         job in the field of data science and web development. </p>
                 </div>
@@ -48,7 +47,9 @@
             </div>
 
         </div>
-        <button class="link-to"><a href="gameOfLife.html">Let's start the game!</a></button>
+        <button class="link-to"><a href="gameOfLife.html">
+                <p class="start-game">Let's start the game!</p>
+            </a></button>
 
 </body>
 
