--- a/gol/gameOfLife.html
+++ b/gol/gameOfLife.html
@@ -10,9 +10,18 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
+    <!-- Bootstrap 4/5 Toggle JS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+
 
     <link rel="stylesheet" href="gameOfLife.css" />
+
     <title>Document</title>
 </head>
 
@@ -24,7 +33,7 @@
         <!-- slider -->
         <div class="controls"></div>
         <label for="framerateSlider" class="form-label">Adjust Speed:</label>
-        <input type="range" class="form-range" id="framerateSlider" min="0" max="60" step="1" value="10"
+        <input type="range" class="form-range" id="framerateSlider" min="0" max="60" step="1" value="5"
             oninput="handleSpeedChange()">
 
         <div class="canvasContainer" id="canvas"></div>
@@ -32,11 +41,11 @@
     </div>
     <form id="customRulesForm">
         <label for="minAliveNeighbors">Minimum alive neighbors:</label>
-        <input type="number" id="minAliveNeighbors" name="minAliveNeighbors" value="">
+        <input type="number" id="minAliveNeighbors" name="minAliveNeighbors" value="2">
         <label for="maxAliveNeighbors">Maximum alive neighbors:</label>
-        <input type="number" id="maxAliveNeighbors" name="maxAliveNeighbors" value="">
+        <input type="number" id="maxAliveNeighbors" name="maxAliveNeighbors" value="3">
         <label for="reproductionNeighbors">Reproduction neighbors:</label>
-        <input type="number" id="reproductionNeighbors" name="reproductionNeighbors" value="">
+        <input type="number" id="reproductionNeighbors" name="reproductionNeighbors" value="3">
 
 
 
@@ -60,7 +69,9 @@
 
 
 
-
+        <div class="d-flex ai-center g8">
+            <input type="checkbox" checked data-toggle="toggle">
+        </div>
 
 
 
