--- a/gol/gameOfLife.html
+++ b/gol/gameOfLife.html
@@ -55,25 +55,21 @@
         <button type="button" class="resume" id="resumeButton">Resume</button>
 
 
-        <div class="Spaceships">
+        <div class="spaceships">
             <button type="button" class="glider" id="glider">Spawn Glider</button>
             <button type="button" class="lwss" id="lwss">Spawn LWSS</button>
             <button type="button" class="gosperGliderGun" id="gosperGliderGun">Spawn Gosper Glider Gun</button>
         </div>
 
-        <!-- test -->
-
-        <p>Resize the browser window to fire the <code>resize</code> event.</p>
-        <p>Window height: <span id="height"></span></p>
-        <p>Window width: <span id="width"></span></p>
 
 
 
         <div class="d-flex ai-center g8">
-            <input type="checkbox" checked data-toggle="toggle">
-        </div>
-
-
+            <label class="switch">
+              <input type="checkbox" id="colorBlindToggle" data-toggle="toggle">
+              <span class="slider round"></span>
+            </label>
+            <span class="toggle-description">Color Blind Mode</span>
 
 
 
