--- a/gol/index.html
+++ b/gol/index.html
@@ -19,47 +19,60 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
 </head>
 
 <body>
     <div class="landing-page">
-        <div class="header">
-            <h1>Hello World!</h1>
-        <div class="container">
-            <div class="grid-system">
-                <div class="grid-left col-4" id="my-background">
-                    <h2 class="col-md title">About Me</h2>
-                    <p class="paragraph">My name is Felix Chan, I worked on securities industry for around 5 years. I am
-                        passionate about
-                        programming and foresee that all people in the world will at least know some technique of
-                        computational thinking to help their job.That's why i am here.<span
-                            class='smile-face'>:')</span></p>
-                </div>
-                <div class="grid-mid col-4" id="to-do-list">
-                    <h2 class="col-md title">To-Do List</h2>
-                    <p class="paragraph">I have four projects needed to finish, each utilizing different
-                        programming languages and technologies, including JavaScript, Python, web server programming,
-                        backend development, and data engineering. My first project is an implementation of Conway's
-                        Game of Life, a fascinating simulation that demonstrates the power of simple rules in complex
-                        systems. Allow me to give you a brief overview of this intriguing game.
-                        .Let me demonstrate it to you.
-                    </p>
-                </div>
-                <div class="grid-right col-4" id="learning-target">
-                    <h2 class="col-md title">Learning Target</h2>
-                    <p class="paragraph">I would try my best to gain expertise on both front-end and back-end
-                        technologies.By doing so i would be the profession on full stack development.Gaining practical
-                        experience before delving into theory
-                    </p>
-                </div>
+        <div class="header ">
+            <h1 class ="typewriter">Hello World!!!!</h1>
 
+
+
+
+
+
+
+
+            <div class="container">
+                <div class="grid-system">
+                    <div class="grid-left col-4" id="my-background">
+                        <h2 class="col-md title">About Me</h2>
+                        <p class="paragraph">My name is Felix Chan, I worked on securities industry for around 5 years.
+                            I am
+                            passionate about
+                            programming and foresee that all people in the world will at least know some technique of
+                            computational thinking to help their job.That's why i am here.<span
+                                class='smile-face'>:')</span></p>
+                    </div>
+                    <div class="grid-mid col-4" id="to-do-list">
+                        <h2 class="col-md title">To-Do List</h2>
+                        <p class="paragraph">I have four projects needed to finish, each utilizing different
+                            programming languages and technologies, including JavaScript, Python, web server
+                            programming,
+                            backend development, and data engineering. My first project is an implementation of Conway's
+                            Game of Life, a fascinating simulation that demonstrates the power of simple rules in
+                            complex
+                            systems. Allow me to give you a brief overview of this intriguing game.
+                            .Let me demonstrate it to you.
+                        </p>
+                    </div>
+                    <div class="grid-right col-4" id="learning-target">
+                        <h2 class="col-md title">Learning Target</h2>
+                        <p class="paragraph">I would try my best to gain expertise on both front-end and back-end
+                            technologies.By doing so i would be the profession on full stack development.Gaining
+                            practical
+                            experience before delving into theory would be my learning style.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="button-container">
+                    <button class="link-to col-4 "><a href="gameOfLife.html">
+                            <span class="start-game">Let's start the game!</span>
+                        </a></button>
+                </div>
             </div>
-            <div class="button-container">
-                <button class="link-to col-4 "><a href="gameOfLife.html">
-                        <span class="start-game">Let's start the game!</span>
-                    </a></button>
-            </div>
-        </div>
 
 
 </body>
